# shark

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis-unused.yaml  .travis.yml  CMakeLists.txt  README.md  Sep18_Base_ParameterFile_Local_Mini-SURFS.conf  sample.cfg  sample_lagos23.cfg
.ci/: check_hdf5_docs.sh  compare_galaxies.sh  run_shark.sh
.github/workflows/: build-and-test.yaml  build-docs.yml
.travis/: before_install.sh  install.sh  test.sh
data/: README.md
data/Colours/: gr_colours_SDSS.data  ur_colours_SDSS.data
data/RESOLVE/: ETall_frac.txt  EThimbary_frac.txt  ETlowmbary_frac.txt  LTall_frac.txt  LThimbary_frac.txt  LTlowmbary_frac.txt  baryonicmassvsgroupmassall_eco.txt  baryonicmassvsgroupmassall_resolve.txt  baryonicmassvsgroupmasscentral_eco.txt  baryonicmassvsgroupmasscentral_resolve.txt  baryonicmassvsgroupmasssatellite_resolve.txt  baryonicmassvshimassall.txt  baryonicmassvshimasssatellite.txt  baryonicmassvsstellarmassall.txt  baryonicmassvsstellarmasscentral.txt  bmassfunction_resolve.txt  bmassfunctionclusterhalos_eco.txt  bmassfunctionhighmasshalos_eco.txt  bmassfunctionhighmasshalos_resolve.txt  bmassfunctionlowmasshalos_eco.txt  bmassfunctionmedmasshalos_eco.txt  bmassfunctionmedmasshalos_resolve.txt  bmassfunctions.txt  bmassfunctions_resolve.txt  groupmassvsbaryonicmassall.txt  groupmassvsbaryonicmasscentral.txt  groupmassvsbaryonicmasssatellite.txt  groupmassvshimassall.txt  groupmassvshimasscentral.txt  himassvbaryonicmassall_eco.txt  himassvbaryonicmassall_resolve.txt  himassvbaryonicmasscentral_eco.txt  himassvbaryonicmasscentral_resolve.txt  himassvbaryonicmasssatellite_eco.txt  himassvbaryonicmasssatellite_resolve.txt  himassvgroupmassall_eco.txt  himassvgroupmasscentral_resolve.txt  himassvgroupmasssatellite_resolve.txt  himassvstellarmassall_eco.txt  himassvstellarmassall_ecot.txt  (+9 more)
data/RESOLVEDATA/: baryonicmassvsgroupmasssatellite_eco.txt  baryonicmassvshimasscentral.txt  baryonicmassvsstellarmasssatellite.txt  bmassfunction_eco.txt  bmassfunctionlowmasshalos_resolve.txt  bmassfunctions_eco.txt  groupmassvshimasssatellite.txt  himassvgroupmassall_resolve.txt  himassvgroupmasscentral_eco.txt  himassvstellarmasscentral_ecot.txt  stellarmassvsbaryonicmassall_resolve.txt  stellarmassvsbaryonicmasscentral_resolve.txt
data/SizeMass/: GAMA_H-band_dlogM_0.25_reff.txt  GAMA_r-band_dlogM_0.25_lim_medianerror.txt  Trujillo_2020_RawData.txt  Trujillo_2020_dlogM_0.25.txt  xGASS_RawData.txt
data/SizesAndAM/: Hardwick+2022_fig3+4.data
data/cooling/: C08.00_m+05.cie  C08.00_m-05.cie  C08.00_m-10.cie  C08.00_m-15.cie  C08.00_m-20.cie  C08.00_m-30.cie  C08.00_msol.cie  C08.00_mzero.cie  C08.00_tables.txt  S93_m+05.cie  S93_m-05.cie  S93_m-10.cie  S93_m-15.cie  S93_m-20.cie  S93_m-30.cie  S93_msol.cie  S93_mzero.cie  S93_tables.txt
data/lf/: beta_uv_19p5_Bouwens14.data  lf1350_z6_bouwens07.data  lf1400_z7-8_Schenker2013.data  lf1500_z0_driver12.data  lf1500_z10_adams23.data  lf1500_z10_oesch2018.data  lf1500_z4-8_Finkelstein2015.data  lf1500_z4_adams19.data  lf1500_z4_yoshida06.data  lf1500_z5_mclure09.data  lf1500_z5_yoshida06.data  lf1500_z6_mclure09.data  lf1500_z7-9_McLure2013.data  lf1500_z7_mclure10.data  lf1500_z7_ouchi09.data  lf1500_z8_adams23.data  lf1500_z8_mclure10.data  lf1500_z9_adams23.data  lf1600_z4-10_Bouwens2015.data  lf1700_z3_reddy09.data  lf1700_z3_sawicki06.data  lf1800_z8_Oesch2012.data  lf1p4GHz_agn_z0_mauch07.data  lf1p4GHz_z0_mauch07.data  lf1p4GHz_z0_sadler02.data  (+25 more)
doc/: Makefile  building.rst  changelog.rst  conf.py  configuration.rst  constraints_impl.rst  hpc.rst  index.rst  optim.rst  output_files.rst  running.rst
hpc/: shark-run  shark-submit
include/: agn_feedback.h  baryon.h  components.h  config.h.in  cosmology.h  dark_matter_halos.h  data.h  disk_instability.h  environment.h  evolve_halos.h  exceptions.h  execution.h  galaxy.h  galaxy_creator.h  galaxy_mergers.h  galaxy_writer.h  gas_cooling.h  git_revision.h  gsl_utils.h  halo.h  integrator.h  interpolator.h  logging.h  merger_tree.h  merger_tree_reader.h  mixins.h  naming_convention.h  nfw_distribution.h  numerical_constants.h  ode_solver.h  omp_utils.h  options.h  parameters.h  physical_model.h  physical_processes.h  ranges.h  recycling.h  reincorporation.h  reionisation.h  root_solver.h  (+13 more)
optim/: analysis.py  constraints.py  diagnostics.py  execution.py  main.py  make_plots.py  mnras.mplstyle  plots.py  pso.py
scripts/: ascii_to_hdf5.sh  compare_galaxies.py  properties_as_list.sh  runtime_stats.sh  test_random_seed.py
src/: agn_feedback.cpp  components.cpp  cosmology.cpp  dark_matter_halos.cpp  data.cpp.in  disk_instability.cpp  environment.cpp  evolve_halos.cpp  execution.cpp  galaxy_creator.cpp  galaxy_mergers.cpp  galaxy_writer.cpp  gas_cooling.cpp  git_revision.cpp.in  halo.cpp  integrator.cpp  interpolator.cpp  logging.cpp  main.cpp  merger_tree.cpp  merger_tree_reader.cpp  naming_convention.cpp  ode_solver.cpp  options.cpp  physical_model.cpp  recycling.cpp  reincorporation.cpp  reionisation.cpp  root_solver.cpp  shark_runner.cpp  simulation.cpp  star_formation.cpp  stellar_feedback.cpp  subhalo.cpp  system.cpp  total_baryon.cpp  tree_builder.cpp  utils.cpp  write_output.cpp
standard_plots/: HIgas_analysis.py  age_size_disk.py  agn_analysis.py  all.py  angularmomentum-halo-connection.py  angularmomentum.py  bh.py  brightgals_z6_study.py  calculate_co_emission.py  clusters.py  clusters_z2_study.py  clusters_z6_study.py  co_analysis.py  coldgas.py  colfs.py  colour_selection_study.py  colours_z0.py  common.py  csed.py  csed_allmodels.py  dust_study.py  extinction_cal.py  extinction_calculation.py  extinction_plot.py  global.py  global_quantities.py  group_properties.py  hmf.py  hothalo.py  hothalo_analysis.py  id_check.py  individual_sed_study.py  individual_sfr_study.py  individual_sfr_study_sharkmodels.py  infall_times.py  irx-beta-study.py  irx-beta-study_sh.py  kband_lf.py  kband_lf_allmodels.py  lf.py  (+32 more)
tests/: CMakeLists.txt  test_components.h  test_execution.h  test_hdf5.h  test_mixins.h  test_naming_convention.h  test_options.h
(+167 files in other folders)
